tree_sitter_v/test/corpus/assignment_statement.txt
===
Assignment Statement
===

fn main() {
  a = 1
  a := 1
  a, b = 1, 2
  a, b := 1, 2
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (assignment_statement
        (expression_list
          (identifier))
        (expression_list
          (int_literal)))
      (short_var_declaration
        (expression_list
          (identifier))
        (expression_list
          (int_literal)))
      (assignment_statement
        (expression_list
          (identifier)
          (identifier))
        (expression_list
          (int_literal)
          (int_literal)))
      (short_var_declaration
        (expression_list
          (identifier)
          (identifier))
        (expression_list
          (int_literal)
          (int_literal))))))

===
Pointer Assignment
===

mut ap := &u64(a)
*ap = size

---

(source_file 
  (short_var_declaration 
    (expression_list (identifier)) 
    (expression_list 
      (type_cast_expression 
        (pointer_type (builtin_type)) 
        (identifier)))) 
    (assignment_statement 
      (expression_list 
        (unary_expression (identifier))) 
        (expression_list (identifier))))
