tree_sitter_v/test/corpus/c_define_clause.txt
===
C Defines Clause
===

#define Expr_123 'test'

---

(source_file
  (c_define_clause (identifier)))

===
Define with optional value
===

module fontstash

#flag -I @VEXEROOT/thirdparty/fontstash
#define FONTSTASH_IMPLEMENTATION
$if gcboehm ? {
	#define FONTSTASH_MALLOC GC_MALLOC
	#define FONTSTASH_REALLOC GC_REALLOC
	#define FONTSTASH_FREE GC_FREE
}
#include "fontstash.h"
#flag -I /usr/local/Cellar/freetype/2.10.2/include/freetype2

---

(source_file
  (module_clause
    (module_identifier))
  (c_flag_clause)
  (c_define_clause
    (identifier))
  (comptime_if_expression
    (identifier)
    (block
      (c_define_clause
        (identifier))
      (c_define_clause
        (identifier))
      (c_define_clause
        (identifier))))
  (c_include_clause
    (interpreted_string_literal))
  (c_flag_clause))
