tree_sitter_v/test/corpus/c_pkgconfig.txt
===
#pkgconfig directive
===

$if macos {
	#pkgconfig bdw-gc
} $else $if openbsd || freebsd {
	#flag -I/usr/local/include
	#flag -L/usr/local/lib
}

---

(source_file
  (comptime_if_expression
    (identifier)
    (block
      (c_pkgconfig))
    (comptime_if_expression
      (binary_expression
        (identifier)
        (identifier))
      (block
        (c_flag_clause)
        (c_flag_clause)))))
