tree_sitter_v/test/corpus/module_clause.txt
=============
Module clause
=============

[manualfree][foo]
module main_123

---

(source_file
  (module_clause
    (attribute_list
      (attribute_declaration 
        (attribute_spec (identifier))) 
      (attribute_declaration 
        (attribute_spec (identifier))))
    (module_identifier)))
