tree_sitter_v/test/corpus/rune_literal.txt
===
Rune Literal
===

const a = `h`

---

(source_file
  (const_declaration
    (const_spec
      (identifier) (rune_literal))))

===
Unescaped quote
===

if !(ch == `'` || ch == `"`) {
}


---

(source_file
  (if_expression
    (unary_expression
      (parenthesized_expression
        (binary_expression
          (binary_expression
            (identifier)
            (rune_literal))
          (binary_expression
            (identifier)
            (rune_literal)))))
    (block)))
  
===
\0 and \` rune literals
===

a := `\0`
b := `\``

---

(source_file
  (short_var_declaration
    (identifier_list
      (identifier))
    (expression_list
      (rune_literal)))
  (short_var_declaration
    (identifier_list
      (identifier))
    (expression_list
      (rune_literal))))
